# OpenWispr

./: README.md  package-lock.json  package.json
.commandcode/taste/: taste.md
.github/workflows/: publish.yml
scripts/: build.cjs
src/: index.html  main.js  overlay.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  audio.rs  config.rs  downloader.rs  history.rs  hotkey.rs  injector.rs  lib.rs  refine_llm.py  transcribe_sherpa.py  voice_notes.rs
